--- a/ejemploGit.html
+++ b/ejemploGit.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+    <div id="container"></div>
+    <div id="cabecera">
+        Blog de Ejemplo
+    </div>
     <h1>Aqui vamos a hacer un blog post</h1>
     <p>Este es el parrafo de inicio</p>
 </body>
