modificando el archivo html cabecera

--- a/ejemploGit.html
+++ b/ejemploGit.html
@@ -10,5 +10,7 @@
 <body>
     <h1>Aqui vamos a hacer un blog post</h1>
     <p>Este es el parrafo de inicio</p>
+    <p>este es mi segundo parrafo</p>
+    <h1>Hola como estas</h1>
 </body>
 </html>
