una version con el titulo cambiado

--- a/ejemploGit.html
+++ b/ejemploGit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bienvendio al Primer trabajo en git</title>
+    <title>Bienvenido al Primer trabajo en git Emocionado!!</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
